dashboard ui improved, landing page minor bug fix

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -636,7 +636,7 @@ section {
 }
 
 .animated-number {
-  animation: countUp 2s ease-out forwards;
+  /* animation: countUp 2s ease-out forwards; */
   display: inline-block;
 }
 
